[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://audio/mixkit-video-game-retro-click-237.wav" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 850.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
text = "Brick Breakers"
align = 1

[node name="playButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 29.0
margin_right = 500.0
margin_bottom = 49.0
text = "Play"

[node name="optionButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 500.0
margin_bottom = 84.0
text = "Options"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 500.0
margin_bottom = 317.0
text = "Use \"A\" to move left and \"D\" to move right
Arrow keys work too for movement
Press \"q\" to quit the game (Once you started playing).

There is only 3 levels to this game - It's short. 

Music: Color Blockade by Waterflame 
Link to Music: https://www.youtube.com/watch?v=I6PUA5mv1kY

Sprites: https://opengameart.org/content/breakout-brick-breaker-tile-set-free
I love how these are free to use!

Made by Alex Piotrowski in Godot"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_to_black = SubResource( 2 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/optionButton" to="." method="_on_optionButton_pressed"]
